@@ -6,5 +6,7 @@ libindy (1.6.2) unstable; urgency=medium
     * Performed the following changes related to Libindy Ledger API:
         * Added `indy_submit_action` endpoint that provides the ability to send either GET_VALIDATOR_INFO or
           POOL_RESTART request to specific nodes and to specify custom timeout for a response from a node.
-        * Updated `indy_build_pool_upgrade_request` API function to accept the additional parameter `package` that allow specify package to be upgraded.* Bugfixes
+        * Updated `indy_build_pool_upgrade_request` API function to accept the additional parameter `package` that allow specify package to be upgraded.
+    * Updated wallet `credentials` to accept the additional parameter `simplified_security`.
+      This parameter provides the ability to use less secured but faster crypto algorithm for master key derivation.
     * Bugfixes
